changes to manuscript

--- a/paper/1_Initial/bibliography.bib
+++ b/paper/1_Initial/bibliography.bib
@@ -37,6 +37,26 @@
   publisher={American Psychological Association}
 }
 
+@article{banellis2025interoceptive,
+  title={Interoceptive Ability is Unrelated to Mental Health Symptoms: Evidence From a Large Scale Multi-Domain Psychophysical Investigation},
+  author={Banellis, Leah and Nikolova, Niia and Fischer Ehmsen, Jesper and Courtin, Arthur S and Vejl{\o}, Melina and Tyrer, Ashley and B{\"o}hme, Rebecca A and Bavato, Francesco and Hoogervorst, Kelly and Fardo, Francesca and others},
+  journal={medRxiv},
+  pages={2025--08},
+  year={2025},
+  publisher={Cold Spring Harbor Laboratory Press}
+}
+
+@article{ashton2007empirical,
+  title={Empirical, theoretical, and practical advantages of the HEXACO model of personality structure},
+  author={Ashton, Michael C and Lee, Kibeom},
+  journal={Personality and social psychology review},
+  volume={11},
+  number={2},
+  pages={150--166},
+  year={2007},
+  publisher={SAGE publications Sage CA: Los Angeles, CA}
+}
+
 @article{rogowska2023validation,
   title={Validation of the shortened 24-item multidimensional assessment of interoceptive awareness, version 2 (Brief MAIA-2)},
   author={Rogowska, Aleksandra M and Tataruch, Rafa{\l} and Klimowska, Klaudia},
@@ -46,6 +66,16 @@
   pages={21270},
   year={2023},
   publisher={Nature Publishing Group UK London}
+}
+
+@article{benau2023self,
+  title={Self-reported interoceptive accuracy and interoceptive attention differentially correspond to measures of visual attention and self-regard},
+  author={Benau, Erik M},
+  journal={PeerJ},
+  volume={11},
+  pages={e15348},
+  year={2023},
+  publisher={PeerJ Inc.}
 }
 
 @article{vig2023self,
