--- a/paper/1_Initial/bibliography.bib
+++ b/paper/1_Initial/bibliography.bib
@@ -57,6 +57,13 @@
   publisher={SAGE publications Sage CA: Los Angeles, CA}
 }
 
+@article{costa1992personality,
+  title={Personality inventory (NEO-PI-R) and NEO five-factor inventory (NEO-FFI): professional manual},
+  author={Costa, PT and McCrae, Robert R and Revised, NEO},
+  journal={Psychological Assessment Resources, Odessa, FL},
+  year={1992}
+}
+
 @article{rogowska2023validation,
   title={Validation of the shortened 24-item multidimensional assessment of interoceptive awareness, version 2 (Brief MAIA-2)},
   author={Rogowska, Aleksandra M and Tataruch, Rafa{\l} and Klimowska, Klaudia},
