--- a/paper/1_Initial/manuscript.qmd
+++ b/paper/1_Initial/manuscript.qmd
@@ -491,7 +491,7 @@ Study 2 examined the dispositional correlates of the IAS and tested whether the 
 <!-- Interoception and mental health + context dependency -->
 The IAS converged robustly with other interoceptive self-report measures, particularly facets of the MAIA, and correlated more strongly with dynamic bodily monitoring (Autonomic Reactivity on the BPQ) than general body awareness [@brand2023; @campos2021; @todd2022]. Item pairings reflecting visceral sensations, such as Hunger–Thirst, were consistently linked to lower depressive and anxiety symptoms [@brand2023; @lin2023], supporting theoretical models connecting interoception to emotion regulation and monitoring of internal bodily states [@khalsa2018interoception; @suksasilp2022towards].
 
-At the same time, these associations were context-dependent: not all item pairings or bodily domains related equally to mood or somatic symptoms [@murphy2019; @koike2023]. Emerging evidence suggests that interoceptive abilities (e.g., sensitivity, precision and metacognitive insight) may not uniformly predict mental health outcomes and may depend on measurement approach or sample characteristics [**REF PRE_PRINT?**].
+At the same time, these associations were context-dependent: not all item pairings or bodily domains related equally to mood or somatic symptoms [@murphy2019; @koike2023]. Emerging evidence suggests that interoceptive abilities (e.g., sensitivity, precision and metacognitive insight) may not uniformly predict mental health outcomes and may depend on measurement approach or sample characteristics [@@banellis2025interoceptive].
 
 <!-- Personality, worldview, and boundaries of interoception -->
 Associations with broader personality traits and high-order beliefs were modest. Small positive correlations with Openness and Agreeableness and weak associations with primal world beliefs (e.g., perceiving the world as alive or comprehensible) suggest that interoception may subtly interact with higher-level cognitive frameworks [@simkute2025interoception; @haustein2024interoception; @gabriele2022dissociations]. However, the effects were weak and inconsistent, reinforcing that interoception primarily aligns with bodily self-perception rather than broad personality or worldview constructs.
